Set icons from extensions on the context menu GtkActions

This way, if icons are set to display in e.g. menus, extensions one will
be properly shown.

https://bugzilla.gnome.org/show_bug.cgi?id=665822